# GFC2

./: .gitignore  README.md
src/: CMakeLists.txt
src/Classes/: CMakeLists.txt  FieldCache.cpp  Gfc2AbnormityLineArchInfo.cpp  Gfc2AbnormityLineArchInfoBinarySerializer.cpp  Gfc2AbnormityLineArchInfoBinarySerializer.h  Gfc2AbnormityLineArchInfoTextSerializer.cpp  Gfc2AbnormityLineArchInfoTextSerializer.h  Gfc2Arc2d.cpp  Gfc2Arc2dBinarySerializer.cpp  Gfc2Arc2dBinarySerializer.h  Gfc2Arc2dTextSerializer.cpp  Gfc2Arc2dTextSerializer.h  Gfc2Arc3d.cpp  Gfc2Arc3dBinarySerializer.cpp  Gfc2Arc3dBinarySerializer.h  Gfc2Arc3dTextSerializer.cpp  Gfc2Arc3dTextSerializer.h  Gfc2AssitAxis.cpp  Gfc2AssitAxisBinarySerializer.cpp  Gfc2AssitAxisBinarySerializer.h  Gfc2AssitAxisTextSerializer.cpp  Gfc2AssitAxisTextSerializer.h  Gfc2AxisAngleAssitAxis.cpp  Gfc2AxisAngleAssitAxisBinarySerializer.cpp  Gfc2AxisAngleAssitAxisBinarySerializer.h  Gfc2AxisAngleAssitAxisTextSerializer.cpp  Gfc2AxisAngleAssitAxisTextSerializer.h  Gfc2AxisDataItem.cpp  Gfc2AxisDataItemBinarySerializer.cpp  Gfc2AxisDataItemBinarySerializer.h  Gfc2AxisDataItemTextSerializer.cpp  Gfc2AxisDataItemTextSerializer.h  Gfc2AxisGrid.cpp  Gfc2AxisGridBinarySerializer.cpp  Gfc2AxisGridBinarySerializer.h  Gfc2AxisGridTextSerializer.cpp  Gfc2AxisGridTextSerializer.h  Gfc2BaseLineArcInfo.cpp  Gfc2BaseLineArcInfoBinarySerializer.cpp  Gfc2BaseLineArcInfoBinarySerializer.h  (+653 more)
src/Classes.net/: GfcClasses.net.vcxproj  GfcClasses.net.vcxproj.filters  NGfc2AbnormityLineArchInfo.cpp  NGfc2AbnormityLineArchInfo.h  NGfc2ArbitrarySection.cpp  NGfc2ArbitrarySection.h  NGfc2Arc2d.cpp  NGfc2Arc2d.h  NGfc2Arc3d.cpp  NGfc2Arc3d.h  NGfc2AssitAxis.cpp  NGfc2AssitAxis.h  NGfc2AxisAngleAssitAxis.cpp  NGfc2AxisAngleAssitAxis.h  NGfc2AxisDataItem.cpp  NGfc2AxisDataItem.h  NGfc2AxisGrid.cpp  NGfc2AxisGrid.h  NGfc2BaseLineArcInfo.cpp  NGfc2BaseLineArcInfo.h  NGfc2Bevel.cpp  NGfc2Bevel.h  NGfc2BillDetail.cpp  NGfc2BillDetail.h  NGfc2BillTotal.cpp  NGfc2BillTotal.h  NGfc2BinaryBooleanResult.cpp  NGfc2BinaryBooleanResult.h  NGfc2BlockShape.cpp  NGfc2BlockShape.h  NGfc2Body.cpp  NGfc2Body.h  NGfc2BooleanListProperty.cpp  NGfc2BooleanListProperty.h  NGfc2BooleanProperty.cpp  NGfc2BooleanProperty.h  NGfc2BooleanResult.cpp  NGfc2BooleanResult.h  NGfc2Box3d.cpp  NGfc2Box3d.h  (+384 more)
src/EntitySchema/: AttributeCompatibility.cpp  AttributeCompatibility.h  AttributeValue.h  BuildinType.cpp  BuildinType.h  CMakeLists.txt  ClassCompatibility.cpp  ClassCompatibility.h  Converter.cpp  Converter.h  DiffModel.cpp  DiffModel.h  DiffTypeObject.cpp  DiffTypeObject.h  EntityAttribute.cpp  EntityAttribute.h  EntityClass.cpp  EntityClass.h  EnumType.cpp  EnumType.h  Model.cpp  Model.h  ModelCompatibility.cpp  ModelCompatibility.h  SchemaMacro.h  TypeDef.cpp  TypeDef.h  TypeDefine.cpp  TypeDefine.h  TypeObject.cpp  TypeObject.h  UndefineType.cpp  UndefineType.h
src/GfcBinarySerializer/: CMakeLists.txt  EntityBinarySerializer.cpp  EntityBinarySerializer.h  EntitySchemaBinarySerializer.h  FieldCacheInitializer.cpp  FieldCacheInitializer.h  ReaderBinaryImp.cpp  ReaderBinaryImp.h  WriterBinaryImp.cpp
src/GfcClasses/: CMakeLists.txt  Document.cpp  GFC.exp  GFC3X0.exp  Gfc2.rc  GfcDocument.cpp  GfcReader.cpp  GfcSchema.cpp  GfcSchema.h  GfcWriter.cpp  Reader.cpp  Schema.cpp  Schema.h  Writer.cpp  dllmain.cpp  resource.h
src/GfcClasses.net/: GfcClasses.net.vcxproj  GfcClasses.net.vcxproj.filters  NDocument.cpp  NDocument.h  NEntity.cpp  NEntity.h  NGfcEntity.cpp  NGfcWriter.cpp  NGfcWriter.h  NReader.cpp  NReader.h  NWriter.cpp  NWriter.h
src/GfcCommon/: CMakeLists.txt  Common.cpp  Common.h
src/GfcEngine/: AttributeCompatibility.cpp  AttributeCompatibility.h  CMakeLists.txt  ClassCompatibility.cpp  ClassCompatibility.h  ContainerImp.h  Converter.cpp  Converter.h  ConverterImp.cpp  ConverterImp.h  Document.cpp  Entity.cpp  EntityAttributeDataHandler.cpp  EntityAttributeDataHandler.h  EntityFactory.cpp  EntitySchema.cpp  EntitySerializer.cpp  EntityTypeTree.cpp  EntityUpgrader.cpp  ExpFile.atg  FileMap.cpp  FileMap.h  GfcEngineUtils.cpp  JsonSerializerUtils.cpp  JsonWrapper.cpp  ModelCompatibility.cpp  MutexGuard.cpp  MutexGuard.h  Parser.cpp  Parser.frame  Parser.h  PropValue.cpp  Property.cpp  Reader.cpp  ReaderFileMapImp.cpp  ReaderFileMapImp.h  ReaderImp.cpp  ReaderImp.h  ReaderJsonImp.cpp  ReaderJsonImp.h  (+16 more)
src/GfcSchema/: AttributeCompatibility.cpp  AttributeCompatibility.h  AttributeValue.cpp  AttributeValue.h  BuildinType.cpp  CMakeLists.txt  ClassCompatibility.cpp  ClassCompatibility.h  Converter.cpp  Converter.h  EntityAttribute.cpp  EntityClass.cpp  EnumType.cpp  Model.cpp  ModelCompatibility.cpp  ModelCompatibility.h  TypeDefine.cpp  TypeObject.cpp  UndefineType.cpp
src/GfcTextSerializer/: CMakeLists.txt  EntityTextSerializer.cpp  EntityTextSerializer.h  ExpFile.atg  Gfc2.rc  GfcTextSerializer.h  Parser.cpp  Parser.h  ReaderTextImp.cpp  ReaderTextImp.h  Scanner.h  TextUpdater.cpp  TextUpdater.h  WriterTextImp.cpp  WriterTextImp.h  dllmain.cpp  resource.h
src/GfcUtils/: AttributeCompatibility.cpp  CMakeLists.txt  ClassCompatibility.cpp  Converter.cpp  GfcElementTransformer.cpp  GfcFrom2.cpp  GfcGeometryExporter.cpp  GfcGeometryImporter.cpp  GfcShapeFrom2.cpp  GfcShapeTransformer.cpp  GfcTo2.cpp  GfcTransform.cpp  GfcTransform30to20.cpp  ModelCompatibility.cpp
src/objectbuf/: CMakeLists.txt  (+18 more)
src/objectbuf.net/: Entity.cpp  Entity.h  GfcEngine.net.vcxproj  GfcEngine.net.vcxproj.filters  Writer.cpp  Writer.h  objectbuf.net_vc100.vcxproj  objectbuf.net_vc110.vcxproj  objectbuf.net_vc120.vcxproj  objectbuf.net_vc140.vcxproj
tests/: CMakeLists.txt  MockWriter.cpp  MockWriter.h  TestAttributeCompatibility.cpp  TestClassCompatibility.cpp  TestConverter.cpp  TestDocument.cpp  TestEntity.cpp  TestEntityAttributeDataHandler.cpp  TestEntityFactory.cpp  TestExpParse.cpp  TestGFCEngine.cpp  TestGFCParse.cpp  TestGfcClasses.cpp  TestGfcFrom2.cpp  TestGfcTransform.cpp  TestJsonSerializerUtils.cpp  TestPropValue.cpp  TestReaderTextImp.cpp  TestTextUpdater.cpp  TestWriterTextImp.cpp  main.cpp
(+1338 files in other folders)
